Fix top margin of login page. Fix login page not showing when run issue.

--- a/client/src/pages/login.css
+++ b/client/src/pages/login.css
@@ -2,4 +2,5 @@
   margin-left: auto;
   margin-right: auto;
   width: 30%;
+  margin-top: 100px;
 }
